--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ezyang/htmlpurifier": "^4.17",
         "laravel/framework": "^11.9",
-        "laravel/socialite": "^5.15",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
