--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@preline/tooltip": "^2.4.1",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "datatables.net-dt": "^2.1.4",
+        "flowbite": "^2.5.1",
         "preline": "^2.4.1"
     }
 }
