--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@preline/toggle-password": "^2.4.1",
         "@preline/tooltip": "^2.4.1",
         "@tailwindcss/aspect-ratio": "^0.4.2",
+        "apexcharts": "^3.53.0",
         "datatables.net-dt": "^2.1.4",
         "flowbite": "^2.5.1",
         "preline": "^2.4.1"
